Add a spinner and use it to indicate waiting for user lookup. Closes issue #12.

--- a/data/bug-list.css
+++ b/data/bug-list.css
@@ -48,12 +48,6 @@ table {
 
 
 
-/* General */
-#content {
-
-}
-
-
 /* User Form */
 #user-form {
     background-color: #787878;
@@ -73,6 +67,10 @@ table {
 
 #user-name.failure {
     background-color: #FF5252;
+}
+
+#user-name.spinner {
+    background: white url('spinner.gif') no-repeat right center;
 }
 
 
