--- a/data/styles.css
+++ b/data/styles.css
@@ -53,12 +53,13 @@
     list-style-type: none;
 }
 
-.bug-list description, .bug-list description:hover {
+.bug, bug:hover {
+    border-bottom: 1px solid #888;
     color: black;
 }
 
-.bug {
-    box-shadow: 0px 2px #888;
+.bug:last-child {
+    border-bottom: none;
 }
 
 .bug:hover {
