--- a/data/styles.css
+++ b/data/styles.css
@@ -8,15 +8,18 @@
 }
 
 #user-name {
+    -moz-appearance: none;
     background-color: white;
+    width: 100%;
 }
 
 #user-name.success {
-    background-color: #70FF00;
+    /*background-color: #70FF00;*/
+    background-color: #C5EFBF;
 }
 
 #user-name.failure {
-    background-color: #FF5252;
+    background-color: #FFA07A;
 }
 
 #user-name.spinner {
@@ -34,11 +37,13 @@
 }
 
 .category-head {
+    border-bottom: 1px solid #A7A7A7;
+    margin: 0 5px 0 5px;
     padding: 2px 10px;
 }
 
 .category-head .category-count {
-    color: orange;
+    color: #FF2400;
     display: inline-block;
     width: 40px;
 }
@@ -49,9 +54,12 @@
 
 .bug-list {
     background-color: #EDEDED;
+    box-shadow: inset 0 0 1px 1px #787878;
     display: none;
     list-style-type: none;
+    margin: 0 5px 0 5px;
 }
+
 
 /* Bugs */
 .bug, bug:hover {
@@ -64,5 +72,5 @@
 }
 
 .bug:hover {
-    background-color: #EDEDED;
+
 }
