--- a/data/styles.css
+++ b/data/styles.css
@@ -64,7 +64,11 @@
 /* Bugs */
 .bug, bug:hover {
     border-bottom: 1px solid #787878;
+    border-left: 1px solid #A7A7A7;
     color: black;
+    margin: 0px;
+    padding: 2px;
+    background-color: white;
 }
 
 .bug:last-child {
