--- a/data/styles.css
+++ b/data/styles.css
@@ -42,10 +42,17 @@
     padding: 2px 10px;
 }
 
+.category-head .counts {
+    display: inline-block;
+    width: 80px;
+}
+
 .category-head .category-count {
     color: #FF2400;
-    display: inline-block;
-    width: 40px;
+}
+
+.category-head .category-new-count {
+    color: blue;
 }
 
 .category-head .category-name {
@@ -62,7 +69,7 @@
 
 
 /* Bugs */
-.bug, bug:hover {
+.bug, .bug:hover {
     border-bottom: 1px solid #787878;
     border-left: 1px solid #A7A7A7;
     color: black;
@@ -71,10 +78,15 @@
     background-color: white;
 }
 
+.bug:hover {
+    text-decoration: underline;
+}
+
 .bug:last-child {
     border-bottom: none;
 }
 
-.bug:hover {
-
+.new-bug {
+    /*background-color: yellow;*/
+    font-weight: bold;
 }
